@@ -73,10 +73,6 @@ Commands:
   Sd2Rd			Convert S documentation to Rd format
   config                Obtain configuration information about R
 
-The first five tools (i.e., BATCH, COMPILE, SHLIB, INSTALL, and REMOVE)
-can currently be invoked without the 'CMD' option, but this usage is
-deprecated.
-
 Please use 'R CMD command --help' to obtain further information about
 the usage of 'command'.
 
@@ -103,9 +99,6 @@ while test -n "${1}"; do
   case ${1} in
     RHOME|--print-home)
       echo "${R_HOME}"; exit 0 ;;
-    BATCH|COMPILE|INSTALL|REMOVE|SHLIB)
-      echo "**** Use of R ${1} rather than R CMD ${1} is deprecated ****"
-      exec sh "${R_HOME}/bin/Rcmd" "${@}" ;;
     CMD)
       shift;
       exec sh "${R_HOME}/bin/Rcmd" "${@}" ;;
